src/objects/Event_Type__c.object
<CustomObject>
    <description>Event types that vary according to occasions</description>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>End_Date__c  -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of an event.</description>
        <inlineHelpText>End Date of an event.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of an event.</description>
        <inlineHelpText>Start Date of an event.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Flows_Available__c</fullName>
        <label>Vendor Flows Available</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Types__c</fullName>
        <label>Vendor Types</label>
        <picklist>
            <picklistValues>
                <fullName>F&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Event Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>